--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,11 @@ dependencies:
   firebase_core: ^2.4.1
   firebase_storage: ^11.0.10
   cached_network_image: ^3.2.3
+  bot_toast: ^4.0.3
+  flutter_markdown: ^0.6.13+1
+  url_launcher: ^6.1.9
+  image_picker_web: ^3.0.0+1
+  cloud_firestore: ^4.3.2
 
 dev_dependencies:
   flutter_test:
