--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,9 @@ dependencies:
   url_launcher: ^6.1.9
   image_picker_web: ^3.0.0+1
   cloud_firestore: ^4.3.2
+  flutter_highlighter: ^0.1.1
+  google_fonts: ^4.0.3
+  universal_html: ^2.0.8
 
 dev_dependencies:
   flutter_test:
