--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   flutter_highlighter: ^0.1.1
   google_fonts: ^4.0.3
   universal_html: ^2.0.8
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
