--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -21,7 +21,7 @@ jobs:
         run: flutter pub get
       # 追記箇所ここまで
 
-      - run: flutter build web
+      - run: flutter build web --web-renderer html --csp
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
